--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html>
 <head>
 	<title>title</title>
+	<link rel="stylesheet" type="text/css" href="main.css"></head>
 </head>
 <body>
-<h1>Hello world</h1>
+<nav>
+	<ul>
+		<li>My Orders</li>
+		<li>My details</li>
+		<li>Adderss Book</li>
+		<li>Sign out</li>
+	</ul>
+</nav>
 </body>
 </html>
