--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 <aside>
 	<div class="Address">
 	<h1>Address Book</h1>
-	<div class="FirstName"><span>First Name</span><input type="text" name="FirstName"></div>
+ <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value="First Name"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value="Last Name"><br><br>
+  <label for="lname">Em@il:</label><br>
+  <input type="text" id="lname" name="lname" value="email"><br><br>
+</div>
 </div>
 </aside>
 </div>
