--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>title</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -16,21 +17,39 @@
 	<h2>Hello, {{ Name }}</h2>
 	</div>
 	<ul class="list">
-		<li class="listElement">My Orders</li>
-		<li class="listElement">My details</li>
-		<li class="listElement">Adderss Book</li>
-		<li class="listElement">Sign out</li>
+		<li class="listElement">  My Orders</li>
+		<li class="listElement"><i class="fa fa-user-o" aria-hidden="true"></i>  My details</li>
+		<li class="listElement"><i class="fa fa-home"></i>  Address Book</li>
+		<li class="listElement"><i class="fa fa-sign-out" aria-hidden="true"></i>  Sign out</li>
 	</ul>
 </nav>
  <! -- left side above rightside below -->
 <aside>
 	<div class="Address">
 	<h1>Address Book</h1>
- <label for="fname">First name:</label><br>
+	<div class="FLname">
+ <label for="fname">First name</label><br>
   <input type="text" id="fname" name="fname" value="First Name"><br>
-  <label for="lname">Last name:</label><br>
+  <label for="lname">Last name</label><br>
   <input type="text" id="lname" name="lname" value="Last Name"><br><br>
-  <label for="epost">Em@il:</label><br>
+</div>
+<div class="secrow">
+  <label for="epost">Em@il</label><br>
+  <input type="text" id="epost" name="epost" value="email"><br><br>
+   <label for="fname">Phone Number</label><br>
+  <input type="text" id="fname" name="fname" value="First Name"><br>
+</div>
+<div>
+  <label for="lname">Country</label><br>
+  <input type="text" id="lname" name="lname" value="Last Name"><br><br>
+  <label for="epost">Adress</label><br>
+  <input type="text" id="epost" name="epost" value="email"><br><br>
+</div>
+   <label for="fname">City/Town</label><br>
+  <input type="text" id="fname" name="fname" value="First Name"><br>
+  <label for="lname">State</label><br>
+  <input type="text" id="lname" name="lname" value="Last Name"><br><br>
+  <label for="epost">ZIP Code</label><br>
   <input type="text" id="epost" name="epost" value="email"><br><br>
 </div>
 </div>
