--- a/index.html
+++ b/index.html
@@ -28,31 +28,20 @@
 	<div class="Address">
 	<h1>Address Book</h1>
 	<div class="FLname">
+		<form>
  <label for="fname">First name</label><br>
   <input type="text" id="fname" name="fname" value="First Name"><br>
-  <label for="lname">Last name</label><br>
+</form>
+  <form>
+  <label for="lname">Email Adress</label><br>
   <input type="text" id="lname" name="lname" value="Last Name"><br><br>
+   </form>
+   <form>
+   <label for="lname">Country</label><br>
+  <input type="checkbox" id="lname" name="lname" value="Last Name"><br><br>
+  	</form>
 </div>
-<div class="secrow">
-  <label for="epost">Em@il</label><br>
-  <input type="text" id="epost" name="epost" value="email"><br><br>
-   <label for="fname">Phone Number</label><br>
-  <input type="text" id="fname" name="fname" value="First Name"><br>
-</div>
-<div>
-  <label for="lname">Country</label><br>
-  <input type="text" id="lname" name="lname" value="Last Name"><br><br>
-  <label for="epost">Adress</label><br>
-  <input type="text" id="epost" name="epost" value="email"><br><br>
-</div>
-   <label for="fname">City/Town</label><br>
-  <input type="text" id="fname" name="fname" value="First Name"><br>
-  <label for="lname">State</label><br>
-  <input type="text" id="lname" name="lname" value="Last Name"><br><br>
-  <label for="epost">ZIP Code</label><br>
-  <input type="text" id="epost" name="epost" value="email"><br><br>
-</div>
-</div>
+
 </aside>
 </div>
 <script
