--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 <aside>
 	<div class="Address">
 	<h1>Address Book</h1>
-	<div class="FLname">
+	<div class="firstrow">
+	<div class="firstblock">
 		<form>
  <label for="fname">First name</label><br>
   <input type="text" id="fname" name="fname" value="First Name"><br>
@@ -36,12 +37,31 @@
   <label for="lname">Email Adress</label><br>
   <input type="text" id="lname" name="lname" value="Last Name"><br><br>
    </form>
-   <form>
-   <label for="lname">Country</label><br>
-  <input type="checkbox" id="lname" name="lname" value="Last Name"><br><br>
-  	</form>
+     <form>
+   <p><select size="3" name="hero">
+    <option disabled>Choose your country</option>
+    <option value="t1" selected>Ukraine</option>
+    <option value="t2">USA</option>
+    <option value="t3">Israel</option>
+    <option value="t4">France</option>
+   </select></p>
+  </form>
 </div>
-
+<div class="secblock">
+		<form>
+ <label for="fname">Last name</label><br>
+  <input type="text" id="fname" name="fname" value="Last Name"><br>
+</form>
+  <form>
+  <label for="lname">Phone number</label><br>
+  <input type="number" id="lname" name="lname" limit="10" value="+(   )   -    "><br><br>
+   </form>
+     <form>
+  <label for="email">Enter your email:</label>
+  <input type="email" id="email" name="email">
+  </form>
+</div>
+</div>
 </aside>
 </div>
 <script
