--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <input type="text" id="lname" name="lname" value="Last Name"><br><br>
    </form>
      <form>
-   <p><select size="3" name="hero">
+   <p><select size="3" name="country">
     <option disabled>Choose your country</option>
     <option value="t1" selected>Ukraine</option>
     <option value="t2">USA</option>
@@ -54,7 +54,7 @@
 </form>
   <form>
   <label for="lname">Phone number</label><br>
-  <input type="number" id="lname" name="lname" limit="10" value="+(   )   -    "><br><br>
+  <input type="tel" id="lname" name="lname" limit="10" value="+(   )   -    "><br><br>
    </form>
      <form>
   <label for="email">Enter your email:</label>
@@ -62,8 +62,21 @@
   </form>
 </div>
 </div>
-</aside>
+<div class="thirdRow">
+	<div class="thirdRowElement">
+	<label for="lname">City/Town</label><br>
+  <input type="text" id="City" name="City" value=" "><br><br>
 </div>
+<div class="thirdRowElement">
+	<label for="lname">State</label><br>
+  <input type="text" id="State" name="State" value=" "><br><br>
+</div>
+<div class="thirdRowElement">
+		<label for="lname">ZIP code</label><br>
+  <input type="number" id="ZIP" name="ZIP" value=" "><br><br>
+</div>
+</div>
+</aside>
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
