--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
 <div class="thirdRow">
 	<div class="thirdRowElement">
 	<label for="lname">City/Town</label><br>
-  <input type="text" id="City" name="City" value=" "><br><br>
+  <input class="check" type="text" id="City" name="City" value=" "><br><br>
 </div>
 <div class="thirdRowElement">
 	<label for="lname">State</label><br>
-  <input type="text" id="State" name="State" value=" "><br><br>
+  <input class="check" type="text" id="State" name="State" value=" "><br><br>
 </div>
 <div class="thirdRowElement">
 		<label for="lname">ZIP code</label><br>
-  <input type="number" id="ZIP" name="ZIP" value=" "><br><br>
+  <input class="check" type="number" id="ZIP" name="ZIP" value=" "><br><br>
 </div>
 </div>
 </aside>
