added cancel button and hover effects

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
   <input class="check" type="number" id="ZIP" name="ZIP" value=" "><br><br>
 </div>
 </div>
+<div class="fourthRow">
+	<div class="cancelButton">
+		<button>Cancel</button>
+</div>
+</div>
 </aside>
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
