--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
 </div>
 <div class="fourthRow">
 	<div class="cancelButton">
-		<button>Cancel</button>
+		<button class="CancelButton">Cancel</button>
+</div>
+<div class="addButton">
+	<div class="addText">Add</div>
+	<div class="button"><button class="Addbutton">></button></div>
 </div>
 </div>
 </aside>
