--- a/index.html
+++ b/index.html
@@ -17,27 +17,26 @@
 	<h2>Hello, {{ fname }} {{ lname }}</h2>
 	</div>
 	<ul class="list">
-		<li class="listElement"><i class="fa fa-cube" aria-hidden="true"></i>  My Orders</li>
-		<li class="listElement"><i class="fa fa-user-o" aria-hidden="true"></i>  My details</li>
-		<li class="listElement"><i class="fa fa-home"></i>  Address Book</li>
-		<li class="listElement"><i class="fa fa-sign-out" aria-hidden="true"></i>  Sign out</li>
+		<li class="listElement"><i class="fa fa-cube" aria-hidden="true"></i><span>My Orders</span></li>
+		<li class="listElement"><i class="fa fa-user-o" aria-hidden="true"></i><span>My details</span></li>
+		<li class="listElement"><i class="fa fa-home"></i><span>Address Book</span></li>
+		<li class="listElement"><i class="fa fa-sign-out" aria-hidden="true"></i><span>Sign out</span></li>
 	</ul>
 
 </nav>
  <! -- left side above rightside below -->
 <aside>
 	<div class="Address">
-	<h1>Address Book</h1>
+		<h1>Address Book</h1>
 	<form>
-	<div class="firstrow">
-	<div class="firstblock">
- <label for="fname">First name</label><br>
-  <input type="text" id="fname" name="fname" value="First Name"><br>
-  <form>
-  <label for="lname">Email Adress</label><br>
-  <input type="text" id="lname" name="lname" value="Last Name"><br><br>
+		<div class="firstrow">
+			<div class="firstblock">
+ 				<label for="fname">First name</label><br>
+  				<input type="text" id="fname" name="fname" value="First Name"><br>
+  				<label for="lname">Email Adress</label><br>
+  				<input type="text" id="lname" name="lname" value="Last Name"><br><br>
   
-   <p><select size="3" name="country">
+   <p><select  name="country">
     <option disabled>Choose your country</option>
     <option value="t1" selected>Ukraine</option>
     <option value="t2">USA</option>
