fixed mistakes, and added new

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
  					<label for="fname">First name</label><br>
   					<input type="text" id="fname" name="fname" placeholder="First Name"><br>
   					<label for="lname">Email Adress</label><br>
-  					<input type="text" id="lname" name="lname" placeholder=""><br><br>
+  					<input type="email" id="lname" name="lname" placeholder="name.example@gmail.com"><br><br>
   					<span>Country</span><br>
    				<select  name="country">
-    				<option disabled>Choose your country</option>
-    				<option value="t1" selected>Ukraine</option>
+    				<option disabled selected>Choose your country</option>
+    				<option value="t1" >Ukraine</option>
     				<option value="t2">USA</option>
     				<option value="t3">Israel</option>
     				<option value="t4">France</option>
@@ -52,8 +52,8 @@
   <label for="lname">Phone number</label><br>
   <input type="tel" id="lname" name="lname" limit="10"><br><br>
 
-  <label for="email">Enter your email:</label>
-  <input type="email" id="email" name="email" placeholder="name.example@gmail.com">
+  <label for="email">Adress</label>
+  <input type="text" id="Adress" name="Adress" placeholder="">
   
 </div>
 </div>
@@ -66,10 +66,11 @@
 	<label for="lname">State</label><br>
    				<select  name="State" class="state-select">
     				<option disabled selected></option>
-    				<option value="t1">Ukraine</option>
-    				<option value="t2">USA</option>
-    				<option value="t3">Israel</option>
-    				<option value="t4">France</option>
+    				<option value="t1">Virginia</option>
+            <option value="t2">California</option>
+    				<option value="t3">Georgia</option>
+    				<option value="t4">Texas</option>
+    				<option value="t4">Virginia</option>
    				</select>
 </div>
 <div class="thirdRowElement">
