--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="container">
 <nav class="nav-bar">
 	<div class="congr">
-	<h2>Hello, {{ fname }} {{ lname }}</h2>
+	<h2>Hello, {{ fname }} {{ lname }}!</h2>
 	</div>
 	<ul class="list">
 		<li class="listElement"><i class="fa fa-cube" aria-hidden="true"></i><span>My Orders</span></li>
@@ -65,7 +65,7 @@
 <div class="thirdRowElement">
 	<label for="lname">State</label><br>
    				<select  name="State" class="state-select">
-    				<option disabled selected></option>
+    				<option disabled selected>Select</option>
     				<option value="t1">Virginia</option>
             <option value="t2">California</option>
     				<option value="t3">Georgia</option>
