--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  					<label for="fname">First name</label><br>
   					<input type="text" id="first-name" name="fname" placeholder="First Name"><br>
   					<label for="lname">Email Adress</label><br>
-  					<input type="email" id="last-name" class="last-name" name="lname" placeholder="name.example@gmail.com"><br><br>
+  					<input type="email" id="email" class="email" name="email" placeholder="name.example@gmail.com"><br><br>
   					<span>Country</span><br>
    			    <select  name="country">
     				  <option disabled selected>Choose your country</option>
@@ -42,10 +42,10 @@
 <div class="second-block">
 
  <label for="fname">Last name</label><br>
-  <input type="text" id="fname" name="fname" placeholder="Last Name"><br>
+  <input type="text" id="last-name" name="last-name" placeholder="Last Name"><br>
 
   <label for="Phone-number">Phone number</label><br>
-  <input type="tel" id="Phone-number" class="last-name" name="lname" limit="10"><br><br>
+  <input type="tel" id="Phone-number" class="Phone-number" name="Phone" limit="10"><br><br>
 
   <label for="Adress">Adress</label>
   <input type="text" id="Adress" name="Adress" placeholder="">
@@ -58,7 +58,7 @@
       <input class="city" type="text" id="City" name="City" value=" "><br><br>
 </div>
 <div class="third-row-element">
-	<label for="lname">State</label><br>
+	<label for="State">State</label><br>
    				<select  name="State" class="state-select">
     				<option disabled selected>Select</option>
     				<option value="t1">Virginia</option>
